name:                ballast
version:             0.1.0.0
synopsis:            _
description:         Please see README.md
homepage:            http://github.com/halvorgb/ballast#readme
license:             BSD3
license-file:        LICENSE
author:              Halvor Granskogen Bjørnstad
maintainer:          halvorgb@gmail.com.com
copyright:           2016 Halvor Granskogen Bjørnstad
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ballast

  other-modules:       Ballast.GameLoop
                     , Ballast.Render
                     , Ballast.Init
                     , Ballast.Types

  build-depends:       base >= 4.7 && < 5
                     , sdl2 >= 2.1.0 && < 2.2.0
                     , sdl2-image
                     , sdl2-mixer
                     , sdl2-ttf
                     , containers
                     , linear
                     , text
                     , random

  default-language:    Haskell2010

test-suite ballast-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , ballast
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable ballast-example01
  build-depends: base >= 4.7 && < 5
               , ballast
               , containers
               , sdl2
               , text
               , random
               , linear

  hs-source-dirs: examples
  main-is: Example01.hs
  default-language: Haskell2010
  ghc-options: -Wall -main-is Example01.main

source-repository head
  type:     git
  location: https://github.com/halvorgb/ballast
